--- a/src/services/i18n/languages/eng.json
+++ b/src/services/i18n/languages/eng.json
@@ -1,6 +1,9 @@
 {
   "login": "Login",
+  "eng": "English",
+  "vie": "Vietnamese",
   "password": "Password",
+  "back_to_home": "Back To Home",
   "dashboard": "Dashboard",
   "catalog": "Catalog",
   "customers": "Customers",
@@ -21,11 +24,44 @@
   "best_selling_products": "Best Selling Products",
   "recent_order": "Recent Order",
   "invoice_no": "Invoice No",
+  "invoice_to": "Invoice To",
   "order_time": "Order time",
   "customer_name": "Customer name",
   "method": "Method",
   "amount": "Amount",
   "status": "Status",
   "action": "Action",
-  "invoice": "Invoice"
+  "invoice": "Invoice",
+  "sr": "SR.",
+  "product_title": "Product Title",
+  "quantity": "Quantity",
+  "item_price": "Item Price",
+  "payment_method": "Payment method",
+  "shipping_cost": "Shipping cost",
+  "discount": "Discount",
+  "total_amount": "Total amount",
+  "cash": "Cash",
+  "transfer": "Transfer",
+  "orders_limit": "Order limits",
+  "5_days_orders": "Last 5 days orders",
+  "7_days_orders": "Last 7 days orders",
+  "15_days_orders": "Last 15 days orders",
+  "30_days_orders": "Last 30 days orders",
+  "start_date": "Start Date",
+  "end_date": "End Date",
+  "filter": "Filter",
+  "reset": "Reset",
+  "provider_oauth": "Provider: Google/Facebook",
+  "provider_auth": "Provider: Coza",
+  "not_found_page": "Not Found Page!",
+  "customer_order_list": "Customer Order List",
+  "pending": "Pending",
+  "processing": "Processing",
+  "delivered": "Delivered",
+  "cancel": "Cancel",
+  "search_by_customer": "Search by Customer Name",
+  "search_by_name_email": "Search by Name/Email",
+  "name": "Name",
+  "provider": "Provider",
+  "joining_date": "Joining date"
 }
