--- a/src/services/i18n/languages/vie.json
+++ b/src/services/i18n/languages/vie.json
@@ -1,6 +1,9 @@
 {
   "login": "Đăng nhập",
+  "eng": "Tiếng Anh",
+  "vie": "Tiếng Việt",
   "password": "Mật khẩu",
+  "back_to_home": "Về trang chủ",
   "dashboard": "Thống kê",
   "catalog": "Danh mục",
   "customers": "Khách hàng",
@@ -21,11 +24,44 @@
   "best_selling_products": "Mặt hàng bán chạy",
   "recent_order": "Đơn hàng gần đây",
   "invoice_no": "Mã đơn hàng",
+  "invoice_to": "Đơn hàng đến",
   "order_time": "Thời gian",
   "customer_name": "Tên khách hàng",
   "method": "Phương thức",
-  "amount": "Giá tiền",
+  "amount": "Tổng tiền",
   "status": "Trạng thái",
   "action": "Hành động",
-  "invoice": "Hóa đơn"
+  "invoice": "Hóa đơn",
+  "sr": "STT",
+  "product_title": "Tên sản phẩm",
+  "quantity": "Số lượng",
+  "item_price": "Giá",
+  "payment_method": "Thanh toán",
+  "shipping_cost": "Phí",
+  "discount": "Giảm giá",
+  "total_amount": "Tổng tiền",
+  "cash": "Tiền mặt",
+  "transfer": "Chuyển khoản",
+  "orders_limit": "Giới hạn đơn hàng",
+  "5_days_orders": "5 ngày trước",
+  "7_days_orders": "7 ngày trước",
+  "15_days_orders": "15 ngày trước",
+  "30_days_orders": "30 ngày trước",
+  "start_date": "Ngày bắt đầu",
+  "end_date": "Ngày kết thúc",
+  "filter": "Tìm kiếm",
+  "reset": "Xóa",
+  "provider_oauth": "Đăng nhập: Google/Facebook",
+  "provider_auth": "Đăng nhập: Coza",
+  "not_found_page": "Không tìm thấy trang!",
+  "customer_order_list": "Danh sách đơn hàng của người dùng",
+  "pending": "Chờ",
+  "processing": "Đang xử lý",
+  "delivered": "Đã giao hàng",
+  "cancel": "Hủy",
+  "search_by_customer": "Tìm kiếm tên khách hàng",
+  "search_by_name_email": "Tìm kiếm theo tên/email",
+  "name": "Tên",
+  "provider": "Cung cấp",
+  "joining_date": "Ngày tham gia"
 }
