--- a/src/services/i18n/languages/vie.json
+++ b/src/services/i18n/languages/vie.json
@@ -58,10 +58,26 @@
   "pending": "Chờ",
   "processing": "Đang xử lý",
   "delivered": "Đã giao hàng",
-  "cancel": "Hủy",
+  "cancel": "Đã Hủy",
   "search_by_customer": "Tìm kiếm tên khách hàng",
   "search_by_name_email": "Tìm kiếm theo tên/email",
   "name": "Tên",
   "provider": "Cung cấp",
-  "joining_date": "Ngày tham gia"
+  "joining_date": "Ngày tham gia",
+  "shipping_address": "Địa chỉ giao hàng",
+  "phone": "Số điện thoại",
+  "message_customer_no_order": "Người dùng hiện chưa có đơn hàng!",
+  "message_no_order": "Hiện chưa có đơn hàng!",
+  "products": "Sản phẩm",
+  "product_name": "Tên sản phẩm",
+  "category": "Danh mục",
+  "categories": "Danh mục",
+  "sale_price": "Giảm giá",
+  "stock": "Hàng tồn kho",
+  "view": "Xem",
+  "published": "Công khai",
+  "tags": "Nhãn",
+  "blogs": "Bài viết",
+  "coupons": "Mã Giảm giá",
+  "search_product": "Tìm kiếm sản phẩm"
 }
