[feat] add coupon

--- a/src/services/i18n/languages/eng.json
+++ b/src/services/i18n/languages/eng.json
@@ -79,5 +79,25 @@
   "tags": "Tags",
   "blogs": "Blogs",
   "coupons": "Coupons",
-  "search_product": "Search Product"
+  "search_product": "Search Product",
+  "campaign_name": "Campaign Name",
+  "add_coupon": "Add Coupon",
+  "cancel_btn": "Cancel",
+  "min_amount": "Minimum Amount",
+  "max_discount": "Max Discount",
+  "campaign_end_time": "Campaign End Time",
+  "campaign_start_time": "Campaign Start Time",
+  "mess_add_coupon": "Add your coupon and necessary information from here",
+  "upload_img": "Upload your image here",
+  "mess_upload_img": "Only *.jpeg, *.webp and *.png images will be accepted",
+  "campaign_banner": "Campaign Banner",
+  "validate_coupon_name": "Coupon name is required!",
+  "validate_coupon_time": "Coupon Validation Time!",
+  "validate_discount": "Discount is required!",
+  "validate_max_count": "Maximum Discount is required!",
+  "validate_min_count": "Minimum Amount is required",
+  "validate_category": "Category is required!",
+  "validate_tags": "Tags are required!",
+  "active": "Active",
+  "expired": "Expired"
 }
