--- a/src/services/i18n/languages/vie.json
+++ b/src/services/i18n/languages/vie.json
@@ -79,5 +79,25 @@
   "tags": "Nhãn",
   "blogs": "Bài viết",
   "coupons": "Mã Giảm giá",
-  "search_product": "Tìm kiếm sản phẩm"
+  "search_product": "Tìm kiếm sản phẩm",
+  "campaign_name": "Tên chiến dịch",
+  "add_coupon": "Thêm mã",
+  "cancel_btn": "Hủy",
+  "min_amount": "Số tiền tối thiểu",
+  "max_discount": "Giảm giá tối đa",
+  "campaign_end_time": "Thời gian bắt đầu",
+  "campaign_start_time": "Thời gian kết thúc",
+  "mess_add_coupon": "Thêm phiếu giảm giá của bạn và thông tin cần thiết từ đây",
+  "upload_img": "Tải ảnh ở đây",
+  "mess_upload_img": "Chỉ các ảnh thuộc kiểu *.jpeg, *.webp and *.png",
+  "campaign_banner": "Ảnh chiến dịch",
+  "validate_coupon_name": "Tên phiếu giảm giá là bắt buộc!",
+  "validate_coupon_time": "Thời gian xác thực phiếu giảm giá!",
+  "validate_discount": "Giảm giá là bắt buộc!",
+  "validate_max_count": "Giảm giá tối đa là bắt buộc!",
+  "validate_min_count": "Số tiền tối thiểu là bắt buộc!",
+  "validate_category": "Danh mục là bắt buộc!",
+  "validate_tags": "Các nhãn là bắt buộc!",
+  "active": "Hoạt động",
+  "expired": "Hết hạn"
 }
