--- a/src/services/i18n/languages/eng.json
+++ b/src/services/i18n/languages/eng.json
@@ -4,6 +4,7 @@
   "vie": "Vietnamese",
   "password": "Password",
   "back_to_home": "Back To Home",
+  "banners": "Banners",
   "dashboard": "Dashboard",
   "catalog": "Catalog",
   "customers": "Customers",
