--- a/src/services/i18n/languages/vie.json
+++ b/src/services/i18n/languages/vie.json
@@ -4,6 +4,7 @@
   "vie": "Tiếng Việt",
   "password": "Mật khẩu",
   "back_to_home": "Về trang chủ",
+  "banners": "Biểu ngữ",
   "dashboard": "Thống kê",
   "catalog": "Danh mục",
   "customers": "Khách hàng",
