[optimize] optimize all component and layouts

--- a/src/services/i18n/languages/eng.json
+++ b/src/services/i18n/languages/eng.json
@@ -83,22 +83,36 @@
   "search_product": "Search Product",
   "campaign_name": "Campaign Name",
   "add_coupon": "Add Coupon",
+  "add_product": "Add Product",
+  "add_tag": "Add Tag",
   "cancel_btn": "Cancel",
   "min_amount": "Minimum Amount",
   "max_discount": "Max Discount",
   "campaign_end_time": "Campaign End Time",
   "campaign_start_time": "Campaign Start Time",
   "mess_add_coupon": "Add your coupon and necessary information from here",
+  "mess_add_product": "Add your product and necessary information from here",
+  "mess_add_tag": "Add your tag and necessary information from here",
   "upload_img": "Upload your image here",
   "mess_upload_img": "Only *.jpeg, *.webp and *.png images will be accepted",
   "campaign_banner": "Campaign Banner",
   "validate_coupon_name": "Coupon name is required!",
+  "validate_product_name": "Product name is required!",
   "validate_coupon_time": "Coupon Validation Time!",
   "validate_discount": "Discount is required!",
   "validate_max_count": "Maximum Discount is required!",
   "validate_min_count": "Minimum Amount is required",
   "validate_category": "Category is required!",
   "validate_tags": "Tags are required!",
+  "validate_description": "Description is required!",
+  "validate_weight": "Weight is required!",
+  "validate_dimensions": "Dimensions is required!",
+  "validate_materials": "Materials is required!",
+  "validate_variants": "Variants are required!",
+  "validate_size": "Size is required!",
+  "validate_color": "Color is required!",
+  "validate_quantity": "Quantity is required!",
+  "validate_price": "Price is required!",
   "active": "Active",
   "expired": "Expired",
   "mess_del": "Are You Sure! Want to Delete",
@@ -114,7 +128,34 @@
   "img": "Image",
   "add_banner": "Add banner",
   "mess_add_banner": "Add banner coupon and necessary information from here",
+  "update_banner": "Update Banner",
+  "mess_update_banner": "Update banner coupon and necessary information from here",
   "add_category": "Add category",
   "mess_add_category": "Add category and necessary information from here",
-  "description": "Description"
+  "description": "Description",
+  "created_at": "Created at",
+  "updated_at": "Updated at",
+  "price": "Price",
+  "mess_no_products": "No Product Yet!",
+  "selling": "Selling",
+  "sold_out": "Sold out",
+  "search_by_product_name": "Search by Product name",
+  "sort": "Sort",
+  "price_low_to_high": "Price: Low to high",
+  "price_high_to_low": "Price: High to low",
+  "newness": "Newness",
+  "oldness": "Oldness",
+  "unpublished": "Unpublished",
+  "short_description": "Short Description",
+  "weight": "Weight",
+  "dimensions": "Dimensions",
+  "materials": "Materials",
+  "publishers": "Publishers",
+  "variants": "Variants",
+  "size": "Size",
+  "color": "Color",
+  "generate_variants": "Generate variants",
+  "mess_add_color": "Enter Color",
+  "mess_add_size": "Enter Size",
+  "mess_add_quantity": "Enter Quantity"
 }
