--- a/src/services/i18n/languages/vie.json
+++ b/src/services/i18n/languages/vie.json
@@ -83,22 +83,36 @@
   "search_product": "Tìm kiếm sản phẩm",
   "campaign_name": "Tên chiến dịch",
   "add_coupon": "Thêm mã",
+  "add_product": "Thêm sản phẩm",
+  "add_tag": "Thêm nhãn",
   "cancel_btn": "Hủy",
   "min_amount": "Số tiền tối thiểu",
   "max_discount": "Giảm giá tối đa",
   "campaign_end_time": "Thời gian bắt đầu",
   "campaign_start_time": "Thời gian kết thúc",
   "mess_add_coupon": "Thêm phiếu giảm giá của bạn và thông tin cần thiết từ đây",
+  "mess_add_product": "Thêm sản phẩm của bạn và thông tin cần thiết từ đây",
+  "mess_add_tag": "Thêm phiếu nhãn và thông tin cần thiết từ đây",
   "upload_img": "Tải ảnh ở đây",
   "mess_upload_img": "Chỉ các ảnh thuộc kiểu *.jpeg, *.webp and *.png",
   "campaign_banner": "Ảnh chiến dịch",
   "validate_coupon_name": "Tên phiếu giảm giá là bắt buộc!",
+  "validate_product_name": "Tên sản phẩm là bắt buộc!",
   "validate_coupon_time": "Thời gian xác thực phiếu giảm giá!",
   "validate_discount": "Giảm giá là bắt buộc!",
   "validate_max_count": "Giảm giá tối đa là bắt buộc!",
   "validate_min_count": "Số tiền tối thiểu là bắt buộc!",
   "validate_category": "Danh mục là bắt buộc!",
   "validate_tags": "Các nhãn là bắt buộc!",
+  "validate_description": "Mô tả là bắt buộc!",
+  "validate_weight": "Trọng lượng là bắt buộc!",
+  "validate_dimensions": "Kích thước là bắt buộc!",
+  "validate_materials": "Chất liệu là bắt buộc!",
+  "validate_variants": "Biến thể là bắt buộc!",
+  "validate_size": "Kích cỡ là bắt buộc!",
+  "validate_color": "Màu sắc là bắt buộc!",
+  "validate_quantity": "Số lượng là bắt buộc!",
+  "validate_price": "Giá is required!",
   "active": "Hoạt động",
   "expired": "Hết hạn",
   "mess_del": "Bạn đã chắc chắn! Muốn xóa ",
@@ -114,7 +128,34 @@
   "img": "Ảnh",
   "add_banner": "Thêm biểu ngữ",
   "mess_add_banner": "Thêm biểu ngữ của bạn và thông tin cần thiết từ đây",
+  "update_banner": "Cập nhật biểu ngữ",
+  "mess_update_banner": "Cập nhật biểu ngữ của bạn và thông tin cần thiết từ đây",
   "add_category": "Thêm danh mục",
   "mess_add_category": "Thêm danh mục và thông tin cần thiết từ đây",
-  "description": "Mô tả"
+  "description": "Mô tả",
+  "created_at": "Ngày tạo",
+  "updated_at": "Ngày cập nhật",
+  "price": "Giá",
+  "mess_no_products": "Hiện chưa có sản phẩm!",
+  "selling": "Đang bán",
+  "sold_out": "Hết hàng",
+  "search_by_product_name": "Tìm kiếm tên sản phẩm",
+  "sort": "Sắp xếp",
+  "price_low_to_high": "Giá: Thấp đến cao",
+  "price_high_to_low": "Giá: Cao xuống thấp",
+  "newness": "Mới nhất",
+  "oldness": "Cũ nhất",
+  "unpublished": "Ẩn",
+  "short_description": "Mô tả Ngắn",
+  "weight": "Trọng Lượng",
+  "dimensions": "Kích Thước",
+  "materials": "Chất Liệu",
+  "publishers": "Nhà Xuất Bản",
+  "variants": "Biến Thể",
+  "size": "Kích Cỡ",
+  "color": "Màu Sắc",
+  "generate_variants": "Tạo biến thể",
+  "mess_add_color": "Nhập màu sắc",
+  "mess_add_size": "Nhập kích cỡ",
+  "mess_add_quantity": "Nhập số lượng"
 }
