[fix] update product

--- a/src/services/i18n/languages/eng.json
+++ b/src/services/i18n/languages/eng.json
@@ -127,9 +127,11 @@
   "content": "Content",
   "img": "Image",
   "add_banner": "Add banner",
-  "mess_add_banner": "Add banner coupon and necessary information from here",
+  "mess_add_banner": "Add banner and necessary information from here",
   "update_banner": "Update Banner",
-  "mess_update_banner": "Update banner coupon and necessary information from here",
+  "mess_update_banner": "Update banner and necessary information from here",
+  "update_product": "Update Product",
+  "mess_update_product": "Update banner coupon and necessary information from here",
   "add_category": "Add category",
   "mess_add_category": "Add category and necessary information from here",
   "description": "Description",
