[feat] update category

--- a/src/services/i18n/languages/eng.json
+++ b/src/services/i18n/languages/eng.json
@@ -131,7 +131,9 @@
   "update_banner": "Update Banner",
   "mess_update_banner": "Update banner and necessary information from here",
   "update_product": "Update Product",
-  "mess_update_product": "Update banner coupon and necessary information from here",
+  "mess_update_product": "Update product and necessary information from here",
+  "update_category": "Update Category",
+  "mess_update_category": "Update category and necessary information from here",
   "add_category": "Add category",
   "mess_add_category": "Add category and necessary information from here",
   "description": "Description",
