--- a/src/services/i18n/languages/vie.json
+++ b/src/services/i18n/languages/vie.json
@@ -132,6 +132,8 @@
   "mess_update_banner": "Cập nhật biểu ngữ của bạn và thông tin cần thiết từ đây",
   "update_product": "Cập nhật sản phẩm",
   "mess_update_product": "Cập nhật sản phẩm của bạn và thông tin cần thiết từ đây",
+  "update_category": "Cập nhật danh mục",
+  "mess_update_category": "Cập nhật danh mục của bạn và thông tin cần thiết từ đây",
   "add_category": "Thêm danh mục",
   "mess_add_category": "Thêm danh mục và thông tin cần thiết từ đây",
   "description": "Mô tả",
