--- a/src/services/i18n/languages/vie.json
+++ b/src/services/i18n/languages/vie.json
@@ -161,5 +161,6 @@
   "generate_variants": "Tạo biến thể",
   "mess_add_color": "Nhập màu sắc",
   "mess_add_size": "Nhập kích cỡ",
-  "mess_add_quantity": "Nhập số lượng"
+  "mess_add_quantity": "Nhập số lượng",
+  "coming_soon": "Sớm ra mắt!"
 }
